# python-itunes

./: README.rst  pyproject.toml
.github/workflows/: test.yaml
itunes/: __init__.py
tests/: tests.py
